2011-09-01  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [WIN32]: Minor rewrite to reduce diffs with W32TeX.

2011-08-30  Akira Kakuto <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c [WIN32]: Remove a semicolon.

2011-08-29  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [WIN32]: Allow to build TeX & Co as DLL.

2011-08-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Remove some (e-)pTeX cruft.

	* openclose.c [PTEX]: No nkf_open() and nkf_close() for WIN32.

2011-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Options for (e-)pTeX and (e-)upTeX.

2011-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Add upTeX and e-upTeX.

2011-08-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Do not #include empty file <kpathsea/recorder.h>.

2011-08-03  Magnus Granberg  <zorry@gentoo.org>

	* texmfmp.c: Use C code for i?86 when -fPIC.

2011-07-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Drop `#warning SyncTeX: -synctex command line...'.

2011-05-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (ipcpage): Add 'free(cwd)'.
	(generic_synctex_get_current_name): Use xgetcwd().

2011-05-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Change arg2 of kpse_absolute_p() from `0' to `false'.

2011-05-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: add a function generic_synctex_get_current_name()
	in order to get full path names for SyncTeX.

2011-05-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (ipc_open_out): Avoid to #define SOCK_NONBLOCK which
	conflicts with newer GNU C library headers.

2011-05-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* openclose.c (recorder_change_filename): on windows, an opened file
	cannot be renamed.

2011-05-02  Karl Berry  <karl@tug.org>

	* openclose.c (recorder_change_filename): take output_directory
	into account.  Report/patch from 
	Philipp Stephani, 30 Apr 2011 16:11:53,
	http://tracker.luatex.org/view.php?id=615
